<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_header">Playlist maker</string>
    <string name="search_string">Поиск</string>
    <string name="media_string">Медиатека</string>
    <string name="settings_string">Настройки</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_header">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_menu_item">Поделиться приложением</string>
    <string name="support_menu_item">Написать в поддержку</string>
    <string name="user_agreement_menu_item">Пользовательское соглашение</string>
    <string name="media_library_activity_header">Медиатека</string>
    <string name="search_activity_header">Поиск</string>
    <string name="search">Поиск</string>

    <string name="select_share_app_message">Выберите приложение</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="email_address">vlada.gkuz@yandex.by</string>
    <string name="offer_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="course_link">https://practicum.yandex.com/android-developer</string>
    <string name="track_name_1">Smells Like Teen Spirit</string>
    <string name="track_name_2">Billie Jean</string>
    <string name="track_name_3">Stayin\' Alive</string>
    <string name="track_name_4">Whole Lotta Love</string>
    <string name="track_name_5">Sweet Child O\'Mine</string>
    <string name="artist_name_1">Nirvana</string>
    <string name="artist_name_2">Michael Jackson</string>
    <string name="artist_name_3">Bee Gees</string>
    <string name="artist_name_4">Led Zeppelin</string>
    <string name="artist_name_5">Guns N\' Roses</string>
    <string name="track_time_1">5:01</string>
    <string name="track_time_2">4:35</string>
    <string name="track_time_3">4:10</string>
    <string name="track_time_4">5:33</string>
    <string name="track_time_5">5:03</string>
    <string name="track_artwork_1">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>
    <string name="track_artwork_2">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>
    <string name="track_artwork_3">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>
    <string name="track_artwork_4">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>
    <string name="track_artwork_5">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>
    <string name="tools_text_track_name">Название трека</string>
    <string name="tools_text_track_artist">Исполнитель</string>
    <string name="tools_text_track_time">5:31</string>
    <string name="search_not_founded">Ничего не нашлось</string>
    <string name="search_network_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_refresh">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history_button">Очистить историю</string>
    <string name="country_label">Страна</string>
    <string name="genre_label">Жанр</string>
    <string name="year_label">Год</string>
    <string name="collection_label">Альбом</string>
    <string name="duration_label">Длительность</string>
    <string name="country_text_tools">Великобритания</string>
    <string name="genre_text_tools">Rock</string>
    <string name="year_text_tools">1965</string>
    <string name="collection_text_tools">Yesterday (Remastered 2009)</string>
    <string name="duration_text_tools">5:35</string>
    <string name="track_time_text_tools">00:00</string>
    <string name="artist_text_tools">The Beatles</string>
    <string name="track_name_text_tools">Yesterday (Remastered 2009)</string>
    <string name="cover_text_tools">Обложка</string>
</resources>