<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="?attr/colorPrimary">

    <TextView
        style="@style/ActivityHeader"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:text="@string/main_header"
        android:textColor="@color/white" />

    <Button
        style="@style/MainMenuButton"
        android:id="@+id/search_button"
        android:layout_marginTop="24dp"
        android:text="@string/search_string"
        app:icon="@drawable/search_button_icon" />

    <Button
        style="@style/MainMenuButton"
        android:id="@+id/media_library_button"
        android:text="@string/media_string"
        app:icon="@drawable/media_button_icon" />

    <Button
        style="@style/MainMenuButton"
        android:id="@+id/settings_button"
        android:layout_marginBottom="28dp"
        android:text="@string/settings_string"
        app:icon="@drawable/settings_button_icon" />

</LinearLayout>