<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/audioplayer_guideline_size" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/audioplayer_guideline_size"  />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="@dimen/back_button_width"
            android:layout_height="@dimen/back_button_width"
            android:layout_marginStart="@dimen/back_button_margin"
            android:layout_marginTop="@dimen/back_button_margin"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_icon"
            app:tint="?attr/colorOnPrimary"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/label_country"
            style="@style/AudioplayerTrackInfoLabel"
            android:layout_marginBottom="@dimen/label_country_margin"
            android:text="@string/country_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/label_genre"
            style="@style/AudioplayerTrackInfoLabel"
            android:text="@string/genre_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/label_country" />

        <TextView
            android:id="@+id/label_year"
            style="@style/AudioplayerTrackInfoLabel"
            android:text="@string/year_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/label_genre" />

        <TextView
            android:id="@+id/label_collection_name"
            style="@style/AudioplayerTrackInfoLabel"
            android:text="@string/collection_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/label_year" />

        <TextView
            android:id="@+id/label_duration"
            style="@style/AudioplayerTrackInfoLabel"
            android:text="@string/duration_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/label_collection_name" />

        <TextView
            android:id="@+id/text_country"
            style="@style/AudioplayerTrackInfo"
            tools:text="@string/country_text_tools"
            app:layout_constraintBaseline_toBaselineOf="@+id/label_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_country" />

        <TextView
            android:id="@+id/text_genre"
            style="@style/AudioplayerTrackInfo"
            tools:text="@string/genre_text_tools"
            app:layout_constraintBaseline_toBaselineOf="@+id/label_genre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_genre" />

        <TextView
            android:id="@+id/text_year"
            style="@style/AudioplayerTrackInfo"
            tools:text="@string/year_text_tools"
            app:layout_constraintBaseline_toBaselineOf="@+id/label_year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_year" />

        <TextView
            android:id="@+id/text_collection_name"
            style="@style/AudioplayerTrackInfo"
            tools:text="@string/collection_text_tools"
            app:layout_constraintBaseline_toBaselineOf="@+id/label_collection_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_collection_name" />

        <TextView
            android:id="@+id/text_duration"
            style="@style/AudioplayerTrackInfo"
            tools:text="@string/duration_text_tools"
            app:layout_constraintBaseline_toBaselineOf="@+id/label_duration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_duration" />

        <TextView
            android:id="@+id/track_time"
            style="@style/AudioplayerTextMedium"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/audioplayer_subheader_height"
            android:text="@string/track_time_text_tools"
            android:layout_marginTop="@dimen/track_time_margin_top"
            android:textFontWeight="500"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/play_track_button"/>

        <ImageButton
            android:id="@+id/add_track_button"
            android:layout_width="@dimen/audioplayer_button_size"
            android:layout_height="@dimen/audioplayer_button_size"
            android:layout_marginBottom="@dimen/audioplayer_button_margin_bottom"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintBottom_toTopOf="@+id/track_time"
            app:layout_constraintEnd_toStartOf="@+id/play_track_button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:background="@drawable/add_track_button"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/play_track_button"
            android:layout_width="@dimen/audioplayer_manage_button_size"
            android:layout_height="@dimen/audioplayer_manage_button_size"
            android:layout_marginBottom="@dimen/audioplayer_manage_button_margin_bottom"
            app:layout_constraintStart_toEndOf="@+id/add_track_button"
            app:layout_constraintBottom_toTopOf="@+id/label_duration"
            app:layout_constraintEnd_toStartOf="@+id/like_track_button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:background="@drawable/play_track_button"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/like_track_button"
            android:layout_width="@dimen/audioplayer_button_size"
            android:layout_height="@dimen/audioplayer_button_size"
            android:layout_marginBottom="@dimen/audioplayer_button_margin_bottom"
            app:layout_constraintStart_toEndOf="@+id/play_track_button"
            app:layout_constraintBottom_toTopOf="@+id/track_time"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:background="@drawable/like_track_button"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/track_artist"
            style="@style/AudioplayerTextMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/audioplayer_subheader_margin_bottom"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintBottom_toTopOf="@+id/play_track_button"
            tools:text="@string/artist_text_tools"/>

        <TextView
            android:id="@+id/track_name"
            style="@style/AudioplayerTextMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/audioplayer_header_margin_bottom"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintBottom_toTopOf="@+id/track_artist"
            android:textSize="22sp"
            tools:text="@string/track_name_text_tools"/>

        <ImageView
            android:id="@+id/image_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/audioplayer_cover_margin_top"
            android:layout_marginBottom="@dimen/audioplayer_cover_margin_bottom"
            android:contentDescription="@string/cover_text_tools"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/back_button"
            app:layout_constraintBottom_toTopOf="@+id/track_name"
            app:srcCompat="@drawable/placeholder" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>